syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.grpc.server";
option java_outer_classname = "GrpcServerProto";

service GrpcServerService {
  rpc findNameFromGrpcServer(GrpcServerRequest) returns(GrpcServerResponse);
  rpc findNamesFromGrpcServer(GrpcServerRequest) returns(GrpcServerResponse);
  rpc findObjectsFromGrpcServer(google.protobuf.Empty) returns(GrpcServerResponse);
  rpc uploadFileToGrpcServer(stream UploadFileChunk) returns (GrpcServerResponse);
  rpc downloadFileFromGrpcServer(GrpcServerRequest) returns(stream DownloadFileChunk);
}

message GrpcServerRequest {
  optional uint64 seq = 1;
  optional string keyword = 2;
}

message GrpcServerResponse {
  uint32 statusCode = 1;
  string message = 2;
  string name = 3;
  repeated string names = 4;
  GrpcObject object = 5;
  repeated GrpcObject objects = 6;
}

message GrpcObject{
  uint64 seq = 1;
  string name = 2;
  bool flag = 3;
}

message UploadFileChunk{
  string fileName = 1;
  bytes data = 2;
}

message DownloadFileChunk{
  bytes data = 1;
}
